# rabbit-digger-pro

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOS.md  build.rs  cgrs
.github/: copilot-instructions.md
.github/workflows/: codecov.yml  docs.yml  nightly.yml  protocol-interop.yml  rust.yml  steamdeck-release.yml  update_schema.yml  vless-xray-interop.yml
agent-docs/: ARCH_REFACTOR_PLAN.md  hysteria.md
agent-docs/hysteria/: .gitignore  README.md  gen-cert.sh  server.yaml
crates/depguard/: Cargo.toml
crates/depguard/src/: main.rs
crates/ffi/: Cargo.toml
crates/protocol/obfs/src/: http_simple.rs
crates/protocol/raw/src/: config.rs  gateway.rs  net.rs
crates/protocol/raw/src/device/: unix.rs
crates/protocol/raw/src/forward/: source.rs
crates/protocol/rpc/: Cargo.toml
crates/protocol/ss/src/: server.rs  udp.rs
crates/rabbit-digger/src/: builtin.rs  registry.rs
crates/rd-derive/: Cargo.toml
crates/rd-interface/src/: config.rs
crates/rd-std/src/: lib.rs
crates/rd-std/src/builtin/: dns.rs
crates/rd-std/src/http/: client.rs
crates/rd-std/src/rule/: geoip.rs
crates/rdp-bundle/src/: lib.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
docs/docs/api/: v1.md  v2.md
docs/docs/config/: README.md  basic.md  format.md  reference.md
docs/docs/develop/: architecture.md  components.md  plugin.md
docs/docs/inside/: steam-deck-decky-integration-plan.md
docs/docs/tutorial/: guide.md  installation.md  introduction.md  usage.md
docs/scripts/: README.md  generate-schema-docs.js
docs/src/components/: SchemaReference.tsx
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
docs/static/schema/: rabbit-digger-pro-schema.json
examples/: http_auth_server.yaml
examples/ui/: all-groups-demo.yaml  fallback-demo.yaml  select-demo.yaml  url-test-demo.yaml
ffi/: Cargo.toml
packaging/decky/: README.md
packaging/decky/rabbit-digger-pro/: main.py  package.json  plugin.json  pnpm-lock.yaml  tsconfig.json
packaging/decky/rabbit-digger-pro/src/: index.tsx
protocol/anytls/: Cargo.toml
protocol/anytls/src/: client.rs  lib.rs  proto.rs
protocol/hysteria/: Cargo.toml
protocol/hysteria/src/: client.rs  codec.rs  crypto_provider.rs  interop_tests.rs  lib.rs  salamander.rs  server.rs  stream.rs  transport.rs  udp.rs
protocol/hysteria2/: Cargo.toml
protocol/hysteria2/src/: client.rs  config.rs  crypto.rs  lib.rs  protocol.rs
protocol/obfs/: Cargo.toml
protocol/raw/: Cargo.toml
protocol/raw/src/: device.rs  fake_ip.rs  forward.rs  gateway.rs  lib.rs  route_setup.rs  server.rs  tun_server.rs
protocol/raw/src/device/: pcap_dev.rs  unix.rs  windows.rs
protocol/rpc/: Cargo.toml
protocol/rpc/src/: server.rs  tests.rs  types.rs
protocol/ss/: Cargo.toml
protocol/ss/src/: client.rs  lib.rs  server.rs  tests.rs  wrapper.rs
protocol/ss/src/server/: source.rs
protocol/trojan/: Cargo.toml
protocol/trojan/src/: client.rs  websocket.rs
protocol/vless/: Cargo.toml
protocol/vless/src/: client.rs  common.rs  interop_tests.rs  lib.rs  reality.rs  server.rs  tests.rs
rabbit-digger/: Cargo.toml
rabbit-digger/src/: config.rs  lib.rs  rabbit_digger.rs  registry.rs
rabbit-digger/src/rabbit_digger/: connection_manager.rs  event.rs  running.rs
rd-interface/: Cargo.toml
rd-interface/src/: error.rs  interface.rs  lib.rs  registry.rs  side_effect.rs
rd-interface/src/config/: compact_vec_string.rs  resolvable.rs
rd-std/: Cargo.toml
rd-std/src/: http.rs  mixed.rs  select.rs  socks5.rs  util.rs
rd-std/src/builtin/: alias.rs  dns.rs  echo.rs  forward.rs  local.rs  noop.rs
rd-std/src/http/: client.rs  server.rs  tests.rs
rd-std/src/rule/: config.rs  geoip.rs
rd-std/src/sniffer/: service.rs
rd-std/src/socks5/: server.rs  tests.rs
rd-std/src/tls/: native-tls.rs  openssl.rs  rustls.rs
rd-std/src/transparent/: origin_addr.rs  redir.rs  tproxy.rs
rd-std/src/util/: drop_abort.rs
rdp-bundle/: Cargo.toml
rdp-bundle/src/: lib.rs
scripts/: build-steamdeck-release.sh  install-steamdeck.sh  interop.Dockerfile  protocol_interop_e2e.sh  vless_xray_reality_e2e.sh
src/: api_server.rs  auto_select.rs  config.rs  fallback.rs  lib.rs  log.rs  main.rs  policy.rs  schema.rs  select.rs  tracing_helper.rs  url_test.rs  util.rs
src/api_server/: embedded_webui.rs  handlers.rs  routes.rs  rpc.rs  shared.rs
src/api_server/v2/: handlers.rs
src/config/: importer.rs  manager.rs  select_map.rs
src/config/importer/: clash.rs  merge.rs  rhai.rs
src/policy/: coordinator.rs  store.rs
src/service/: daemon.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/storage/: file.rs  memory.rs
src/util/: app_dirs.rs  debounce_stream.rs  exit_stream.rs  suggest_tun_ip.rs
tools/depguard/: Cargo.toml
tools/depguard/src/: main.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/instructions/: code.md
ui/src/: App.tsx  index.css
ui/src/api/: rdp.ts  v1.ts
ui/src/components/: Navbar.tsx  delete-instance-dialog.tsx  instance-dialog.tsx
ui/src/components/ui/: sidebar.tsx
ui/src/contexts/: instance-provider.tsx  instance.tsx
ui/src/hooks/: use-instance-statuses.ts  use-local-storage.ts
ui/src/lib/: parseAddress.ts  status-transition.ts
ui/src/pages/connection/: index.tsx
ui/src/pages/logs/: index.tsx
ui/src/pages/main/: index.tsx  instances.tsx  select.tsx
ui/src/pages/settings/: index.tsx
ui/src/utils/: storage.ts
webui/: package.json  pnpm-lock.yaml  vite.config.ts
webui/src/: App.tsx  api.ts  index.css  store.ts  types.ts  utils.ts
webui/src/components/: icons.tsx  sidebar-sparkline.tsx
webui/src/hooks/: use-rdp-dashboard.ts
webui/src/pages/: connections-page.tsx  logs-page.tsx  select-nets-page.tsx  settings-page.tsx  status-page.tsx
