[package]
name = "rabbit-digger-pro"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "Just a stub"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync", "time"] }
clap = { version = "4.5.54", default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "derive",
    "env",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
    "json",
] }
rabbit-digger = { version = "0.1", path = "./rabbit-digger", features = ["rd-std"] }
rdp-bundle = { version = "0.1", path = "./rdp-bundle" }
notify-stream = "0.1.1"
futures = "0.3.31"
pin-project-lite = "0.2.16"
serde_yaml = "0.9.33"
yaml-merge-keys = { version = "0.8.2", features = ["serde_yaml"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rd-interface = { path = "./rd-interface/", version = "0.4" }
rd-std = { path = "./rd-std/", version = "0.1" }
cfg-if = "1.0.4"
reqwest = { version = "0.13.1", features = [
    "native-tls-vendored",
    "socks",
    "json",
] }
parking_lot = "0.12.5"
uuid = { version = "1.19.0", features = ["v4"] }
fs2 = "0.4.3"
async-stream = "0.3.6"
once_cell = "1.21.3"

axum = { version = "0.8.8", features = ["ws"], optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
tower-http = { version = "0.6.8", features = [
    "fs",
    "cors",
    "trace",
], optional = true }
dirs = { version = "6.0.0" }
json-patch = { version = "4.1.0", optional = true }
url = { version = "2.5.8", optional = true, features = ["serde"] }
hyper = { version = "1.8.1", optional = true, features = ["http1", "client"] }
percent-encoding = { version = "2.3.2", optional = true }
bytes = { version = "1.11.0", optional = true }


console-subscriber = { version = "0.5.0", optional = true }

chrono = { version = "0.4.43", optional = true }
tracing-serde = { version = "0.2.0", optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31.0", optional = true }

rhai = { version = "1.24.0", optional = true, features = [
    "no_float",
    "no_module",
    "no_optimize",
    "no_closure",
    "serde",
    "only_i32",
] }

jemallocator = { version = "0.5.4", optional = true }
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
rusty-hook = "0.11.0"
tempfile = "3.24.0"
tower = "0.5.2"
tokio-tungstenite = "0.28.0"

[features]
default = [
    "ss",
    "trojan",
    "rpc",
    "obfs",
    "api_server",
    "rhai",
    "raw",
    "telemetry",
]
ss = ["rdp-bundle/ss"]
trojan = ["rdp-bundle/trojan"]
rpc = ["rdp-bundle/rpc"]
raw = ["rdp-bundle/raw"]
obfs = ["rdp-bundle/obfs"]
api_server = [
    "axum",
    "serde_urlencoded",
    "tower-http",
    "json-patch",
    "url",
    "hyper",
    "percent-encoding",
    "bytes",
]
console = ["console-subscriber", "tokio/tracing"]
telemetry = [
    "tracing-opentelemetry",
    "opentelemetry",
    "chrono",
    "tracing-serde",
]
jemalloc = ["jemallocator"]
libpcap = ["rdp-bundle/libpcap"]

[workspace]
members = [
    "rabbit-digger",
    "rd-interface",
    "rd-std",
    "rd-derive",
    "rdp-bundle",
    "protocol/ss",
    "protocol/trojan",
    "protocol/rpc",
    "protocol/raw",
    "protocol/obfs",
    "ffi",
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "rabbit-digger-pro"
