[package]
name = "rd-std"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2021"
description = "std for rabbit-digger"
license = "MIT OR Apache-2.0"

[dependencies]
# common
rd-interface = { version = "0.4", path = "../rd-interface" }
rd-derive = { version = "0.1", path = "../rd-derive" }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1.26"
anyhow = "1.0"
tokio = { version = "1.50.0", features = ["net", "rt", "macros"] }
parking_lot = "0.12.0"
tokio-util = { version = "0.7.1", features = ["codec", "net"] }
pin-project-lite = "0.2.8"
itertools = "0.14.0"

# socks5
socks5-protocol = "0.3.2"

# http
http = { version = "1.4.0", optional = true }
hyper = { version = "1.9.0", features = ["http1", "client", "server"] }
base64 = "0.22.1"
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["tokio"] }

# transparent
libc = "0.2.91"
socket2 = { version = "0.6.1", features = ["all"] }
cfg-if = "1.0"

# rule
smoltcp = { version = "0.13.0", default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
] }
lru_time_cache = "0.11"
serde_with = "3.1.0"
maxminddb = "0.27.3"
flate2 = "1.0.20"
tar = "0.4.35"
once_cell = "1.7.2"

# dns
trust-dns-proto = "0.23.2"
trust-dns-resolver = { version = "0.23.2", optional = true }

# tls
tokio-rustls = { version = "0.26.4", features = ["ring"], optional = true }
webpki-roots = { version = "1.0.6", optional = true }

openssl-crate = { package = "openssl", version = "0.10.76", features = [
    "vendored",
], optional = true }
tokio-openssl = { version = "0.6.5", optional = true }

tokio-native-tls = { version = "0.3.1", optional = true }
native-tls-crate = { package = "native-tls", version = "0.2.18", features = [
    "vendored",
], optional = true }

# sni-sniffer
tls-parser = "0.12.2"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }

[features]
default = ["trust-dns-resolver", "rustls"]
plugin = []

rustls = ["tokio-rustls", "webpki-roots"]
openssl = ["openssl-crate", "tokio-openssl"]
native-tls = ["tokio-native-tls", "native-tls-crate"]
