[package]
name = "hysteria"
version = "0.1.0"
edition = "2021"

[dependencies]
rd-interface = { path = "../../rd-interface", version = "0.4" }
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0"

quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
bytes = "1"
futures-util = "0.3.31"
rustls-native-certs = "0.8"
rustls-pemfile = "2"

[dev-dependencies]
rd-std = { path = "../../rd-std", version = "0.1" }
