[package]
name = "raw"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rd-interface/", version = "0.4" }
rd-std = { path = "../../rd-std/", version = "0.1" }
# rd-interface = "0.3"
serde = "1.0"
tracing = "0.1.26"
tokio-smoltcp = "0.5.2"
tokio = { version = "1.5.0", features = ["rt", "macros", "net"] }
pcap = { version = "2.4.0", optional = true }
futures = "0.3"
lru_time_cache = "0.11"
parking_lot = "0.12.1"
parking_lot_core = "0.9.8"

tokio-util = { version = "0.7.18", features = ["codec"] }

[target.'cfg(unix)'.dependencies.tun-crate]
version = "0.8.5"
package = "tun"
features = ["async"]

[target.'cfg(windows)'.dependencies]
libc = "0.2"
wintun = "0.5.1"
once_cell = "1.7.2"
# the same as parking_lot_core, should reduce the compile time
windows-sys = { version = "0.61.2", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
nix = "0.31.0"

[features]
default = []
libpcap = ["pcap"]
