[package]
name = "vless"
version = "0.1.0"
edition = "2021"

[dependencies]
rd-interface = { path = "../../rd-interface", version = "0.4" }
rd-std = { path = "../../rd-std", version = "0.1" }
serde = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1.11.0"
futures = "0.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
uuid = "1.19.0"
tracing = "0.1.44"

[dev-dependencies]
rcgen = "0.13"
tempfile = "3.24.0"
serde_json = "1.0"
