[package]
name = "vless"
version = "0.1.0"
edition = "2021"

[dependencies]
rd-interface = { path = "../../rd-interface", version = "0.4" }
rd-std = { path = "../../rd-std", version = "0.1" }
serde = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1.11.0"
futures = "0.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-rustls = "0.26.4"
rustls = { version = "0.23.36", features = ["ring"] }
rustls-pemfile = "2.2.0"
uuid = "1.19.0"
tracing = "0.1.44"
base64 = "0.22.1"
webpki-roots = "0.26.11"
hex = "0.4.3"
reality = { git = "https://github.com/eycorsican/reality-rs.git" }
reality-rustls = { package = "rustls", git = "https://github.com/eycorsican/reality-rustls.git", branch = "reality-rebase-0.23.36", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tls-parser = "0.12.2"
x25519-dalek = "2.0.1"
hkdf = "0.12.4"
hmac = "0.12.1"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
rcgen = "0.13"
yasna = "0.5.2"

[dev-dependencies]
tempfile = "3.24.0"
serde_json = "1.0"
